# teamclaw-next

./: .gitignore  .wip-autoheal.md  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  build.config.banana.json  build.config.belayo.json  build.config.example.json  build.config.local.json  build.config.production.json  build.config.teal.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  teamclaw-team  vitest.config.v2-e2e.ts
apps/daemon/: .env.example  CONTEXT.md  Cargo.toml  README.md  opencode.lock.json
apps/daemon/e2e/oss-sync/: .env.local.example  .gitignore  Dockerfile.amuxd  README.md  docker-compose.yml  package.json
apps/daemon/e2e/oss-sync/harness/: converge.mjs  daemon-client.mjs  docker.mjs  fc-client.mjs  http.mjs  secret.mjs  setup.mjs
apps/daemon/e2e/oss-sync/tests/: 01-one-way.test.mjs  02-two-way.test.mjs  03-concurrent-conflict.test.mjs  04-resolve.test.mjs  05-remote-delete.test.mjs  06-delete-vs-dirty.test.mjs  07-binary.test.mjs  08-idempotent.test.mjs  09-three-node.test.mjs  10-nested-prefixes.test.mjs  11-rename.test.mjs  12-offline-catchup.test.mjs  13-delete-readd.test.mjs  14-sidecar-no-propagation.test.mjs  15-unicode.test.mjs  16-three-node-conflict.test.mjs  17-edit-vs-delete.test.mjs  18-wrong-secret.test.mjs  unit-converge.test.mjs  unit-docker.test.mjs  unit-http.test.mjs  unit-secret.test.mjs
apps/daemon/src/: device_id.rs  error.rs  main.rs  mcp_probe.rs  provider_config.rs  team_link.rs  team_shared_env.rs  team_shared_git.rs
apps/daemon/src/agent_discover/: mod.rs
apps/daemon/src/backend/: cloud_api.rs  error.rs  mock.rs  mod.rs  records.rs
apps/daemon/src/backend/cloud_api/: auth.rs  client.rs  gateway.rs  messages.rs  mod.rs
apps/daemon/src/channels/: acp_handle.rs  backend_store.rs  bot_prompt_file.rs  manager.rs  mod.rs  supabase_store.rs
apps/daemon/src/cli/: channel.rs  clear.rs  config_cmd.rs  doctor.rs  install_opencode.rs  mcp_server.rs  mod.rs  process.rs  service.rs  test_client.rs
apps/daemon/src/collab/: auth.rs  peers.rs  permissions.rs
apps/daemon/src/config/: daemon_config.rs  global_team_store.rs  member_store.rs  mod.rs  opencode_xdg.rs  provider_auth.rs  roles_skills.rs  session_store.rs  team_mcp.rs  workspace_control.rs  workspace_instructions.rs  workspace_link.rs  workspace_path.rs  workspace_store.rs
apps/daemon/src/daemon/: binding_target.rs  collab_runtime_ensure.rs  mod.rs  prompt_await.rs  runtime_cursor.rs  runtime_env.rs  runtime_resolution.rs  server.rs  session_events.rs  session_resume.rs
apps/daemon/src/history/: store.rs
apps/daemon/src/http/: auth.rs  cors.rs  errors.rs  events.rs  limit.rs  mod.rs  observ.rs  routes.rs  runtime_adapter.rs  server.rs  sessions.rs  state.rs  team.rs  team_sync.rs  tokens.rs  workspaces.rs
apps/daemon/src/mqtt/: client.rs  publisher.rs  subscriber.rs
apps/daemon/src/nats/: client.rs  mod.rs  retained.rs
apps/daemon/src/onboarding/: init.rs  invite_url.rs
apps/daemon/src/opencode_install/: mod.rs
apps/daemon/src/opencode_settings/: client.rs  mod.rs  pool.rs
apps/daemon/src/pocketbase/: client.rs  config.rs  error.rs  mod.rs  records.rs
apps/daemon/src/runtime/: acp_catalog_probe.rs  acp_host.rs  adapter.rs  agent_trace.rs  env_assembly.rs  handle.rs  instruction_delivery.rs  manager.rs  mod.rs  models.rs  refresh.rs  refresh_watch.rs  supervisor.rs  turn_aggregator.rs  workspace_runtime.rs
apps/daemon/src/service/: mod.rs
apps/daemon/src/supabase/: client.rs  config.rs  mod.rs
apps/daemon/src/sync/: dispatch.rs  git.rs  mod.rs  secret_store.rs  timer.rs  versions.rs
apps/daemon/src/sync/oss/: conflict.rs  crypto.rs  engine.rs  error.rs  fc_client.rs  manifest.rs  mod.rs  path_validator.rs  scanner.rs  state.rs
apps/daemon/src/teamclaw/: idea_store.rs  live.rs  message_store.rs  mod.rs  notify.rs  rpc.rs  session_manager.rs  session_store.rs
apps/daemon/tests/: http_sessions_runtime.rs  http_workspace_provider_auth.rs  nats_retained.rs  teamclaw_mqtt_rearchitecture.rs
apps/daemon/tests/fixtures/: nats-test.conf
apps/daemon/tests/support/: crate_modules.rs
apps/desktop/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/binaries/: .gitignore  teamclaw-askpass.sh
apps/desktop/capabilities/: default.json
apps/desktop/crates/teamclaw-introspect/: Cargo.toml
apps/desktop/crates/teamclaw-introspect/src/: capabilities.rs  config.rs  env_vars.rs  main.rs
apps/desktop/crates/teamclaw-p2p/: build.rs
apps/desktop/crates/teamclaw-p2p/src/: lib.rs
apps/desktop/crates/teamclaw-sync/: Cargo.toml
apps/desktop/crates/teamclaw-sync/src/: lib.rs  oss_types.rs
apps/desktop/src/: branding.rs  lib.rs  opencode_paths.rs
apps/desktop/src/commands/: acp_debug_log.rs  clawhub.rs  daemon_http.rs  daemon_onboarding.rs  device_identity.rs  device_token.rs  env_vars.rs  introspect_api.rs  mod.rs  mqtt_bus.rs  oauth_loopback.rs  opencode.rs  oss_commands.rs  server_config.rs  setup.rs  shared_secrets.rs  shared_secrets_crypto.rs  skillssh.rs  team.rs  team_git.rs  team_litellm.rs  team_p2p.rs  team_secret_store.rs  team_shared_git.rs  team_sync_all.rs  team_sync_proxy.rs  team_types.rs  team_unified.rs  team_webdav.rs  terminal.rs  updater.rs  version_commands.rs  webview.rs  window.rs  window_chrome.rs  workspace_files.rs
apps/desktop/src/commands/cron/: amuxd_client.rs  delivery.rs  mod.rs  (+3 more)
apps/desktop/src/local_cache/: commands.rs  store.rs
apps/desktop/src/mqtt/: client.rs  mod.rs  topics.rs
apps/desktop/src/terminal/: mod.rs  pty.rs  registry.rs  shell_integration.rs
apps/desktop/tauri-plugin-mcp-local/: build.rs
apps/desktop/tests/: custom_git_smoke.rs  team_litellm_smoke.rs  team_share_smoke.rs
crates/teamclaw-runtime-env/: Cargo.toml
crates/teamclaw-runtime-env/src/: env_catalog.rs  lib.rs  mcp_resolve.rs  merge.rs  opencode_db.rs  personal_secrets.rs  team_provider.rs  test_util.rs
crates/teamclaw-transport/: Cargo.toml
crates/teamclaw-transport/src/: lib.rs  nats.rs  publisher.rs
crates/teamclaw-transport/tests/: nats_roundtrip.rs
(+825 files in other folders)
