[package]
name = "amuxd"
version = "0.1.0"
edition = "2021"

[dependencies]
# ACP
agent-client-protocol = { version = "0.10.4", features = ["unstable_session_model", "unstable_session_resume", "unstable_session_usage"] }

# MQTT
rumqttc = "0.24"

# NATS (alternative transport)
async-nats = "0.49"
futures-util = "0.3"

# Protobuf
prost = { workspace = true }
prost-types = { workspace = true }
teamclaw-gateway = { path = "../../crates/teamclaw-gateway" }
teamclaw-proto = { path = "../../crates/teamclaw-proto" }
teamclaw-runtime-env = { path = "../../crates/teamclaw-runtime-env" }
teamclaw-transport = { path = "../../crates/teamclaw-transport" }
teamclaw-types = { path = "../../crates/teamclaw-types" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"

# Utilities
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
rand = "0.8"
subtle = "2"
getrandom = "0.2"
walkdir = "2"
humantime-serde = "1"
parking_lot = "0.12"

# HTTP / SSE (browser-facing daemon API)
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util", "limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "request-id", "util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
mime = "0.3"

# TLS (match rumqttc 0.24's rustls version)
rustls = "0.22"
tokio-rustls = "0.25"

# HTTP / JWT / crypto (Cloud API client + team_shared_env)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
url = "2"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
async-nats = "0.49"
