[package]
name = "teamclaw-runtime-env"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
base64 = "0.22"
dirs = "6"
hkdf = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
