[package]
name = "teamclaw-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.24"
async-nats = "0.49"
async-trait = "0.1"
futures-util = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
